# lachesis

./: linting.sh  pyproject.toml  unittests.sh
.devcontainer/: Dockerfile  devcontainer.json
lachesis/: __init__.py  calendar.py  categories.py  day.py  event.py  lachesis.py  main.py  timeslice.py
lachesis/tests/: test_calendar.py  test_categories.py  test_day.py  test_timeslice.py
lachesis/util/: __init__.py
