[build-system]
requires = ["setuptools"]

[project]
name = "lachesis"
version = "0.0.0"
description = "Time Allocation"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "setuptools",
]

[tool.setuptools]
packages = ["lachesis", "lachesis.tests", "lachesis.util"]